sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:11: error: not found: value lgr
    while (i+ecart < lgr) {
                     ^