sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var ecart = getNombreValeurs();
  var haveBeenSorted = true;
  while ((ecart > 1) || haveBeenSorted) {
    var haveBeenSorted = false;
    if (ecart > 1) {
      ecart = (ecart.toDouble / 1.3).toInt;
    }
    var i = 0;
    while (i+ecart < lgr) {
      if (isSmaller(i, i+ecart)) {
        swap(i, i+ecart);
        haveBeenSorted = true;
        i += 1;
      }
    }
  }
}